// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reflections: (header) should compile template with breadcrumbs and project title 1`] = `
"**typedoc-plugin-markdown**

[helper: breadcrumbs]

# Module: \\"reflections\\"

[partial: index]

[partial: members]
"
`;

exports[`Reflections: (template) should compile a callable reflection 1`] = `
"# Interface: CallableReflection

_\\"reflections\\".CallableReflection_

## Hierarchy

[helper: hierarchy]

## Callable

[partial: member.signature]

[partial: members]
"
`;

exports[`Reflections: (template) should compile an indexable reflection 1`] = `
"# Interface: IndexableReflection

_\\"reflections\\".IndexableReflection_

## Hierarchy

[helper: hierarchy]

## Indexable

▪ \\\\[index: number\\\\]: string

[partial: comment]

[partial: members]
"
`;

exports[`Reflections: (template) should compile module with breadcrumbs and project title 1`] = `
"# Module: \\"reflections\\"

[partial: index]

[partial: members]
"
`;

exports[`Reflections: (template) should compile reflection with type params 1`] = `
"# Interface: ReflectionWithTypeParams\\\\<**T, V**>

_\\"reflections\\".ReflectionWithTypeParams_

## Type parameters

* T
* V

## Hierarchy

[helper: hierarchy]

[partial: members]
"
`;
